[metadata]
name = demo
version = 0.0.1
author = cezmunsta
author_email = github@incoming-email.co.uk
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License V3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
    pyyaml==6.0.1
    requests==2.28.1
package_dir =
    = lib
packages = find:
python_requires = >=3.6
scripts =
    bin/demo

[options.packages.find]
where = lib
include =
    demo
exclude = additional
